--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ commands =
     coverage combine
     coverage report -m
     coverage xml
-    black datastock --line-length 88 --skip-string-normalization
-    flake8 datastock
-    pylint datastock --rcfile=tox.ini
-    mypy datastock --config-file tox.ini
+    black boxs --line-length 88 --skip-string-normalization
+    flake8 boxs
+    pylint boxs --rcfile=tox.ini
+    mypy boxs --config-file tox.ini
 
 [testenv:docs]
 description = Build the documentation for dev without committing
@@ -32,7 +32,7 @@ deps =
     mkdocs-git-revision-date-plugin
 commands =
     mkdocs build
-    # mkdocs serve # Uncomment to check the built documentation locally
+    mkdocs serve # Uncomment to check the built documentation locally
 
 [testenv:docs-release]
 description = Build the documentation for a release
@@ -56,7 +56,7 @@ branch = True
 command_line = -m pytest
 parallel = True
 source =
-    datastock/
+    boxs/
 
 [coverage:report]
 exclude_lines =
@@ -68,7 +68,7 @@ exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
 max-complexity = 10
 max-line-length = 88
 per-file-ignores =
-    datastock/__init__.py:F401
+    boxs/__init__.py:F401
 
 [mypy]
 
