--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Datastock documentation
-site_url: https://docs.kant.ai/datastock/
-repo_url: https://gitlab.com/kantai/datastock/
+site_url: https://docs.kant.ai/boxs/
+repo_url: https://gitlab.com/kantai/boxs/
 site_dir: build
 
 nav:
