Fix: Don't start webserver after building docs
The webserver was blocking the build in Gitlab, which leads to a timeout
marking the job as failed.

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
     mkdocs-git-revision-date-plugin
 commands =
     mkdocs build
-    mkdocs serve # Uncomment to check the built documentation locally
+    # mkdocs serve # Uncomment to check the built documentation locally
 
 [testenv:docs-release]
 description = Build the documentation for a release
