Fixed pylint warnings for pandas and value_types.py

--- a/tox.ini
+++ b/tox.ini
@@ -73,6 +73,9 @@ per-file-ignores =
 
 [mypy]
 
+[mypy-pandas.*]
+ignore_missing_imports = True
+
 [SIMILARITIES]
 # Minimum lines number of a similarity.
 min-similarity-lines=4
