Added documentation for the command line interface

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Home: index.md
   - Getting started: getting_started.md
   - User guide: user_guide.md
+  - Command line interface: cli.md
   - Changelog: changelog.md
   - API: api.md
 
