--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ commands =
 description = Build the documentation for dev without committing
 basepython = python3.8
 deps =
+    .[pandas]
     mkdocs
     mkdocs-material
     mkdocstrings
