Added documentation for the FileSystemStorage
When writing the documentation I discovered that the symlinks created by
the storage used absolute paths. In order to make it easier to move a
file system storage directory to another path, the symlinks use now
relative paths.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
   - Transformers:
       - Statistics: transformers/statistics.md
       - Checksum: transformers/checksum.md
+  - Storages:
+      - File: storages/file.md
   - Changelog: changelog.md
   - API: api.md
 
