Add pandas dependency for releasing documentation

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ commands =
 description = Build the documentation for a release
 basepython = python3.8
 deps =
+    .[pandas]
     mkdocs
     mkdocs-material
     mkdocstrings
